--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 .header {
-    background-image: url(/assets/img/bg.jpg);
+    background-image: url(assets/img/bg.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -27,6 +27,7 @@ body {
     display: flex;
     align-items: center;
 }
+
 .menu {
     position: absolute;
     top: 0;
